--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,66 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/keyboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/companyNameGroup"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/companyNameHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/name" />
-
-        <EditText
-            android:id="@+id/companyNameValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="10" />
-
-    </LinearLayout>
-    
-    <LinearLayout
-        android:id="@+id/options"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ToggleButton
-            android:id="@+id/companysType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textOn="Поставщик"
-            android:textOff="Покупатель"
-            android:layout_weight="1" />
-
-        <Switch
-            android:id="@+id/isResident"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Резидент" />
-
-        <CheckBox
-            android:id="@+id/accessAllowed"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Доступ разрешен" />
+            android:layout_height="match_parent"
+            android:layout_gravity="center">
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/number_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_1"
+                android:textSize="@dimen/number_text_size"/>
 
-    <Button
-        android:id="@+id/writeDossier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Записать" />
+            <Button
+                android:id="@+id/number_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_2"
+                android:textSize="@dimen/number_text_size"/>
 
-</LinearLayout>
+            <Button
+                android:id="@+id/number_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_3"
+                android:textSize="@dimen/number_text_size"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center">
+
+            <Button
+                android:id="@+id/number_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_4"
+                android:textSize="@dimen/number_text_size"/>
+
+            <Button
+                android:id="@+id/number_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_5"
+                android:textSize="@dimen/number_text_size"/>
+
+            <Button
+                android:id="@+id/number_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_6"
+                android:textSize="@dimen/number_text_size"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center">
+
+            <Button
+                android:id="@+id/number_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_7"
+                android:textSize="@dimen/number_text_size"/>
+
+            <Button
+                android:id="@+id/number_8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_8"
+                android:textSize="@dimen/number_text_size"/>
+
+            <Button
+                android:id="@+id/number_9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/number_9"
+                android:textSize="@dimen/number_text_size"/>
+
+        </TableRow>
+
+    </TableLayout>
+
+</FrameLayout>
