--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="number_text_size">20dp</dimen>
+    <dimen name="number_text_size">30dp</dimen>
+    <dimen name="button_indent">0dp</dimen>
 </resources>
