--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="button_operator">#FFCC00</color>
+    <color name="button_spetial_operator">#F5F5F5</color>
 </resources>
