--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ButtonNumberStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="ScoreboardStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">120dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize">40dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/white</item>
+    </style>
+
+    <style name="ButtonNumberStyle">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">90dp</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textSize">40dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
     </style>
 
     <style name="ButtonOperatorStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">90dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize">40dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/button_operator</item>
+    </style>
+
+    <style name="ButtonSpecialOperatorStyle">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">90dp</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textSize">40dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/button_spetial_operator</item>
     </style>
 </resources>
