--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">120dp</item>
         <item name="android:layout_margin">1dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:textSize">40dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
