Задание 3: Частично реализована модель.

--- a/app/src/main/res/layout/activity_keyboard.xml
+++ b/app/src/main/res/layout/activity_keyboard.xml
@@ -40,8 +40,8 @@
                 style="@style/ButtonSpecialOperatorStyle"/>
 
             <Button
-                android:id="@+id/operator_divide_modulo"
-                android:text="@string/operator_divide_modulo"
+                android:id="@+id/operator_percent"
+                android:text="@string/operator_percent"
                 style="@style/ButtonSpecialOperatorStyle"/>
 
             <Button
