--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,11 @@
 <resources>
     <style name="ScoreboardStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">120dp</item>
+        <item name="android:layout_height">250dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">right</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingLeft">20dp</item>
         <item name="android:textSize">40dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
