--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ScoreboardStyle">
+    <style name="ScoreboardStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">250dp</item>
         <item name="android:layout_margin">1dp</item>
         <item name="android:gravity">right</item>
         <item name="android:paddingRight">20dp</item>
         <item name="android:paddingLeft">20dp</item>
-        <item name="android:textSize">40dp</item>
+        <item name="android:textSize">40sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
     </style>
 
-    <style name="ButtonNumberStyle">
+    <style name="ButtonNumberStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">90dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">40dp</item>
+        <item name="android:textSize">40sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
     </style>
 
-    <style name="ButtonOperatorStyle">
+    <style name="ButtonOperatorStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">90dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">40dp</item>
+        <item name="android:textSize">40sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/button_operator</item>
     </style>
 
-    <style name="ButtonSpecialOperatorStyle">
+    <style name="ButtonSpecialOperatorStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">90dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">40dp</item>
+        <item name="android:textSize">40sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/button_spetial_operator</item>
     </style>
