--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="number_text_size">30dp</dimen>
-    <dimen name="button_indent">1dp</dimen>
+    <dimen name="scoreboard_height">250dp</dimen>
+    <dimen name="scoreboard_text_size">40sp</dimen>
+    <dimen name="scoreboard_padding_right">20sp</dimen>
+    <dimen name="scoreboard_padding_left">20sp</dimen>
+
+    <dimen name="button_width">100dp</dimen>
+    <dimen name="button_height">90dp</dimen>
+    <dimen name="button_text_size">40sp</dimen>
+
+    <dimen name="indent">1dp</dimen>
 </resources>
