--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,38 +3,38 @@
     <style name="ScoreboardStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">250dp</item>
-        <item name="android:layout_margin">1dp</item>
+        <item name="android:layout_margin">@dimen/indent</item>
         <item name="android:gravity">right</item>
-        <item name="android:paddingRight">20dp</item>
-        <item name="android:paddingLeft">20dp</item>
-        <item name="android:textSize">40sp</item>
+        <item name="android:paddingRight">@dimen/scoreboard_padding_right</item>
+        <item name="android:paddingLeft">@dimen/scoreboard_padding_left</item>
+        <item name="android:textSize">@dimen/scoreboard_text_size</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
     </style>
 
     <style name="ButtonNumberStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">90dp</item>
-        <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">40sp</item>
+        <item name="android:layout_width">@dimen/button_width</item>
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:layout_margin">@dimen/indent</item>
+        <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
     </style>
 
     <style name="ButtonOperatorStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">90dp</item>
-        <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">40sp</item>
+        <item name="android:layout_width">@dimen/button_width</item>
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:layout_margin">@dimen/indent</item>
+        <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/button_operator</item>
     </style>
 
     <style name="ButtonSpecialOperatorStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">90dp</item>
-        <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">40sp</item>
+        <item name="android:layout_width">@dimen/button_width</item>
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:layout_margin">@dimen/indent</item>
+        <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/button_spetial_operator</item>
     </style>
