--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,6 @@
     <style name="ScoreboardStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">250dp</item>
-        <item name="android:layout_margin">@dimen/indent</item>
         <item name="android:gravity">right</item>
         <item name="android:paddingRight">@dimen/scoreboard_padding_right</item>
         <item name="android:paddingLeft">@dimen/scoreboard_padding_left</item>
@@ -15,7 +14,9 @@
     <style name="ButtonNumberStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">@dimen/button_width</item>
         <item name="android:layout_height">@dimen/button_height</item>
-        <item name="android:layout_margin">@dimen/indent</item>
+        <item name="android:layout_marginStart">@dimen/button_margin_start</item>
+        <item name="android:layout_marginEnd">@dimen/button_margin_end</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
         <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textColor">@color/button_number_text</item>
         <item name="android:backgroundTint">@color/button_background</item>
@@ -24,7 +25,9 @@
     <style name="ButtonOperatorStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">@dimen/button_width</item>
         <item name="android:layout_height">@dimen/button_height</item>
-        <item name="android:layout_margin">@dimen/indent</item>
+        <item name="android:layout_marginStart">@dimen/button_margin_start</item>
+        <item name="android:layout_marginEnd">@dimen/button_margin_end</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
         <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textColor">@color/button_operator_text</item>
         <item name="android:backgroundTint">@color/button_background</item>
@@ -33,7 +36,9 @@
     <style name="ButtonDropOperatorStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">@dimen/button_width</item>
         <item name="android:layout_height">@dimen/button_height</item>
-        <item name="android:layout_margin">@dimen/indent</item>
+        <item name="android:layout_marginStart">@dimen/button_margin_start</item>
+        <item name="android:layout_marginEnd">@dimen/button_margin_end</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
         <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textColor">@color/button_operator_special_text</item>
         <item name="android:backgroundTint">@color/button_background</item>
@@ -42,7 +47,9 @@
     <style name="ButtonSpecialOperatorStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">@dimen/button_width</item>
         <item name="android:layout_height">@dimen/button_height</item>
-        <item name="android:layout_margin">@dimen/indent</item>
+        <item name="android:layout_marginStart">@dimen/button_margin_start</item>
+        <item name="android:layout_marginEnd">@dimen/button_margin_end</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
         <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textColor">@color/button_operator_special_text</item>
         <item name="android:backgroundTint">@color/button_background</item>
