--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,9 +5,14 @@
     <dimen name="scoreboard_padding_right">20sp</dimen>
     <dimen name="scoreboard_padding_left">20sp</dimen>
 
-    <dimen name="button_width">100dp</dimen>
+    <dimen name="button_width">80dp</dimen>
     <dimen name="button_height">90dp</dimen>
     <dimen name="button_text_size">40sp</dimen>
 
-    <dimen name="indent">1dp</dimen>
+    <dimen name="button_margin_start">7dp</dimen>
+    <dimen name="button_margin_end">7dp</dimen>
+    <dimen name="button_margin_top">0dp</dimen>
+    <dimen name="button_margin_bottom">0dp</dimen>
+
+    <dimen name="button_corner_radius">15dp</dimen>
 </resources>
