--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,9 +6,20 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="ScoreboardStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="VerticalScoreboardStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">250dp</item>
+        <item name="android:layout_height">@dimen/vertical_scoreboard_height</item>
+        <item name="android:gravity">right</item>
+        <item name="android:paddingRight">@dimen/scoreboard_padding_right</item>
+        <item name="android:paddingLeft">@dimen/scoreboard_padding_left</item>
+        <item name="android:textSize">@dimen/scoreboard_text_size</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/white</item>
+    </style>
+
+    <style name="HorizontalScoreboardStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/horizontal_scoreboard_height</item>
         <item name="android:gravity">right</item>
         <item name="android:paddingRight">@dimen/scoreboard_padding_right</item>
         <item name="android:paddingLeft">@dimen/scoreboard_padding_left</item>
