--- a/app/src/main/res/layout/activity_keyboard.xml
+++ b/app/src/main/res/layout/activity_keyboard.xml
@@ -131,9 +131,13 @@
             style="@style/TableRowStyle">
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/settings"
+                style="@style/ButtonSpecialOperatorStyle"
+                android:text="@string/settings" />
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/number_0"
                 style="@style/ButtonNumberStyle"
-                android:layout_span="2"
                 android:text="@string/number_0" />
 
             <com.google.android.material.button.MaterialButton
