--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,7 +64,9 @@
     <style name="OtherButton" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
+        <item name="android:textSize">@dimen/other_button_text_size</item>
+        <item name="android:textColor">@color/button_operator_text</item>
         <item name="android:backgroundTint">@color/button_background</item>
     </style>
 </resources>
