--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,9 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.CalculatorDark" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.CalculatorDark" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <!--item name="android:textSize">@dimen/textSize</item-->
+        <item name="android:textStyle">bold</item>
     </style>
+
 </resources>
